DOP_clusterization_2019/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: PostgresqlDeployement
  namespace: default

spec:
  replicas: 0

  selector:
    matchLabels:
      app: PostgresqlDeployement
  template:
    metadata:
      labels:
        app: PostgresqlDeployement
    spec:
      restartPolicy: Always
      volumes:
        - name: beub
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      containers:
        - image: postgres:12
          imagePullPolicy: Always
          name: PostgresqlDeployement
          ports:
            - containerPort: 5432
