DOP_clusterization_2019/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: WorkerDeployement

spec:
  replicas: 0
  selector:
    matchLabels:
      app: WorkerDeployement
  template:
    metadata:
      labels:
        app: WorkerDeployement
    spec:
      restartPolicy: Always
      containers:
        - image: epitechcontent/t-dop-600-worker:k8s
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256M"
          name: WorkerDeployement
