DOP_clusterization_2019/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pollService

spec:
  type: local
  selector:
    app: PolLDeploy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9376
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9377
