DOP_clusterization_2019/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: PostgresqlService

spec:
  selector:
    app: PostgresqlDeployement
  ports:
    - name: http
      port: 5432
