DOP_clusterization_2019/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RedisService

spec:
  selector:
    app: RedisDeploy
  ports:
    - name: http
      port: 6379
