DOP_clusterization_2019/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ResultService

spec:
  type: local
  selector:
    app: ResultDeploy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9376
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9377
