DOP_clusterization_2019/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-public
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: TraefikDeployemeny
