DOP_clusterization_2019/result.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: result.dop.io
    - http:
        paths:
          - path: /testpath
            backend:
              serviceName: test
              servicePort: 80
